--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
   ],
   "dependencies": {
     "purescript-prelude": "^4.1.1",
-    "purescript-console": "^4.2.0"
+    "purescript-console": "^4.2.0",
+    "purescript-aff": "^5.1.1",
+    "purescript-node-fs-aff": "^6.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
